# ascii

./: cabal.project
ascii/: ascii.cabal
ascii-case/: ascii-case.cabal
ascii-caseless/: ascii-caseless.cabal
ascii-char/: ascii-char.cabal
ascii-group/: ascii-group.cabal
ascii-numbers/: ascii-numbers.cabal
ascii-predicates/: ascii-predicates.cabal
ascii-superset/: ascii-superset.cabal
ascii-th/: ascii-th.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.6/: ascii-1.7.0.2-inplace.conf  ascii-case-1.0.1.4-inplace.conf  ascii-caseless-0.0.0.2-inplace.conf  ascii-char-1.0.1.0-inplace.conf  ascii-group-1.0.0.17-inplace.conf  ascii-numbers-1.2.0.2-inplace.conf  ascii-predicates-1.0.1.4-inplace.conf  ascii-superset-1.3.0.2-inplace.conf  ascii-th-1.2.0.1-inplace.conf  package.cache
