cabal-version: 3.0

name: ascii-case
version: 1.0.1.4
synopsis: ASCII letter case
category: Data, Text

description:
    This package defines a @Case@ type that describes the
    two varieties of ASCII letter: capital and small.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/ascii-case
bug-reports: https://github.com/typeclasses/ascii-case/issues

extra-source-files: *.md

source-repository head
    type: git
    location: git://github.com/typeclasses/ascii-case.git

common base
    default-language: GHC2021
    ghc-options: -Wall

    default-extensions:
        BlockArguments
        DeriveAnyClass
        DerivingStrategies
        LambdaCase
        NoImplicitPrelude

    build-depends:
      , ascii-char
      , base 

library
    import: base
    hs-source-dirs: library

    build-depends:
      , hashable 

    exposed-modules:
        ASCII.Case

test-suite test-ascii-case
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
      , ascii-case
      , hspec 
