cabal-version: 3.0

name: ascii-char
version: 1.0.1.0
synopsis: A Char type representing an ASCII character
category: Data, Text

description:
    This package defines a @Char@ type that has
    128 constructors, one for each ASCII character.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/ascii-char
bug-reports: https://github.com/typeclasses/ascii-char/issues

extra-source-files: *.md

common base
    default-language: GHC2021
    ghc-options: -Wall

    default-extensions:
        NoImplicitPrelude

    build-depends:
      , base

library
    import: base
    hs-source-dirs: library

    default-extensions:
        DeriveAnyClass
        DeriveDataTypeable
        DeriveGeneric
        DerivingStrategies
        StandaloneDeriving

    build-depends:
      , hashable

    exposed-modules:
        ASCII.Char

test-suite test-ascii-char
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
      , ascii-char
      , hspec
