cabal-version: 3.0

name: ascii-group
version: 1.0.0.17
synopsis: ASCII character groups
category: Data, Text

description:
    This package defines a @Group@ type that describes
    the two varieties of ASCII character, and provides
    some functions for classifying characters by group.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/ascii-group
bug-reports: https://github.com/typeclasses/ascii-group/issues

extra-source-files: *.md

common base
    default-language: GHC2021
    ghc-options: -Wall

    default-extensions:
        NoImplicitPrelude

    build-depends:
      , ascii-char
      , base 

library
    import: base
    hs-source-dirs: library

    default-extensions:
        DeriveAnyClass
        DeriveDataTypeable
        DeriveGeneric
        DerivingStrategies
        StandaloneDeriving

    build-depends:
      , hashable 

    exposed-modules:
        ASCII.Group

test-suite test-ascii-group
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
      , ascii-group
      , hspec 

    default-extensions:
        OverloadedStrings
        QuasiQuotes
        TemplateHaskell
