cabal-version: 3.0

name: ascii-numbers
version: 1.2.0.2
synopsis: ASCII representations of numbers
category: Data, Numeric, Text

description:
    This package provides functions for converting back and
    forth between numbers and their ASCII representations.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/ascii-numbers
bug-reports: https://github.com/typeclasses/ascii-numbers/issues

extra-source-files: *.md

source-repository head
    type: git
    location: git://github.com/typeclasses/ascii-numbers.git

common base
    default-language: Haskell2010
    ghc-options: -Wall

    default-extensions:
        DeriveAnyClass
        DeriveDataTypeable
        DeriveGeneric
        DerivingStrategies
        FlexibleInstances
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        StandaloneDeriving

    build-depends:
      , ascii-case
      , ascii-char
      , ascii-superset
      , base 
      , bytestring 
      , hashable 
      , text 

library
    import: base
    hs-source-dirs: library

    exposed-modules:
        ASCII.Decimal
        ASCII.Hexadecimal
        ASCII.Word4

    other-modules:
        DList

test-suite test-ascii-numbers
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
      , ascii-numbers
      , hedgehog
      , invert 

    default-extensions:
        OverloadedStrings
        QuasiQuotes
        ScopedTypeVariables
        TemplateHaskell
        TypeApplications
