cabal-version: 3.0

name: ascii
version: 1.7.0.2
synopsis: The ASCII character set and encoding
category: Data, Text

description:
    This package provides a variety of ways to work with ASCII text.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/ascii
bug-reports: https://github.com/typeclasses/ascii/issues

extra-source-files: *.md

source-repository head
    type: git
    location: git://github.com/typeclasses/ascii.git

common base
    default-language: GHC2021
    ghc-options: -Wall
    default-extensions: NoImplicitPrelude
    build-depends:
      , ascii-caseless
      , ascii-char
      , ascii-group
      , ascii-case
      , ascii-numbers
      , ascii-predicates
      , ascii-superset
      , ascii-th
      , base 
      , bytestring 
      , text

library
    import: base
    hs-source-dirs: library
    exposed-modules: ASCII
    reexported-modules:
      , ASCII.Case
      , ASCII.Caseless
      , ASCII.CaseRefinement
      , ASCII.Char
      , ASCII.Decimal
      , ASCII.Group
      , ASCII.Hexadecimal
      , ASCII.Isomorphism
      , ASCII.Lists
      , ASCII.ListsAndPredicates
      , ASCII.Predicates
      , ASCII.QuasiQuoters
      , ASCII.Refinement
      , ASCII.Superset
      , ASCII.Superset.Text
      , ASCII.TemplateHaskell
      , ASCII.Word4

test-suite test-ascii
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    default-extensions: OverloadedStrings QuasiQuotes
    build-depends:
      , ascii
      , hspec
